package com.company;

//Class Visited

public interface Visited {
  void acceptVisitor(Visitor visitor);
}
